Alteração de cor de titulo

--- a/TRABALHO/Menu.html
+++ b/TRABALHO/Menu.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body style="background-color: rgb(197, 125, 73);">
-        <p align="center" style="font-size:30px;">DESTINO DOS DONHOS</p>
+        <p align="center" style="font-size:30px; color: aliceblue;">DESTINO DOS DONHOS</p>
      <center>
         <a href="file:///C:/Users/Johann/Documents/JOHANN123/TRABALHO/Pagina1.html" style="font-size:20px;">GRAMADO</a>
     </center>
